[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Cutscenes/CutscenePlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemies/BlackMage/BlackMage.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Cutscenes/BossIntro.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Cutscenes/DialogBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/BGM/2. Entwined Timelines.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Arrive"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -230, 0 ), Vector2( 700, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fly"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 700, 0 ), Vector2( 300, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="EndingCutscene" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -10 )
z_index = 0
tile_data = PoolIntArray( 0, 4, 0, 2, 4, 0, 4, 4, 0, 6, 4, 0, 8, 4, 0, 10, 4, 0, 12, 4, 0, 14, 4, 0, 16, 4, 0, 18, 4, 0, 20, 4, 0, 22, 4, 0, 24, 4, 0, 26, 4, 0, 28, 4, 0, 30, 4, 0, 32, 4, 0, 34, 4, 0, 36, 4, 0, 38, 4, 0, 65536, 0, 0, 65538, 0, 0, 65540, 0, 0, 65542, 0, 0, 65544, 0, 0, 65546, 0, 0, 65548, 0, 0, 65550, 0, 0, 65552, 0, 0, 65554, 0, 0, 65556, 0, 0, 65558, 0, 0, 65560, 0, 0, 65562, 0, 0, 65564, 0, 0, 65566, 0, 0, 65568, 0, 0, 65570, 0, 0, 65572, 0, 0, 65574, 0, 0, 196608, 3, 0, 196610, 3, 0, 196612, 3, 0, 196614, 3, 0, 196616, 2, 0, 196617, 3, 0, 196619, 0, 0, 196621, 0, 0, 196623, 0, 0, 196625, 0, 0, 196627, 0, 0, 196629, 0, 0, 196631, 0, 0, 196633, 0, 0, 196635, 0, 0, 196637, 0, 0, 196639, 0, 0, 196641, 0, 0, 196643, 0, 0, 196645, 0, 0, 196647, 2, 0, 262144, 0, 0, 262146, 0, 0, 262148, 0, 0, 262150, 0, 0, 262153, 0, 0, 327688, 2, 0, 327691, 0, 0, 327693, 0, 0, 327695, 0, 0, 327697, 0, 0, 327699, 0, 0, 327701, 0, 0, 327703, 0, 0, 327705, 0, 0, 327707, 0, 0, 327709, 0, 0, 327711, 0, 0, 327713, 0, 0, 327715, 0, 0, 327717, 0, 0, 327719, 2, 0, 393216, 0, 0, 393218, 0, 0, 393220, 0, 0, 393222, 0, 0, 393225, 0, 0, 458760, 2, 0, 458763, 0, 0, 458765, 0, 0, 458767, 0, 0, 458769, 0, 0, 458771, 0, 0, 458773, 0, 0, 458775, 0, 0, 458777, 0, 0, 458779, 0, 0, 458781, 0, 0, 458783, 0, 0, 458785, 0, 0, 458787, 0, 0, 458789, 0, 0, 458791, 2, 0, 524288, 0, 0, 524290, 0, 0, 524292, 0, 0, 524294, 3, 0, 524297, 0, 0, 589830, 1, 0, 589835, 0, 0, 589837, 0, 0, 589839, 0, 0, 589841, 0, 0, 589843, 0, 0, 589845, 0, 0, 589847, 0, 0, 589849, 0, 0, 589851, 2, 0, 589852, 1, 0, 589855, 0, 0, 589857, 0, 0, 589859, 0, 0, 589861, 0, 0, 589863, 2, 0, 655360, 0, 0, 655362, 0, 0, 655364, 0, 0, 655369, 0, 0, 720907, 0, 0, 720909, 0, 0, 720911, 0, 0, 720913, 0, 0, 720915, 0, 0, 720917, 0, 0, 720919, 0, 0, 720921, 0, 0, 720923, 2, 0, 720927, 0, 0, 720929, 0, 0, 720931, 0, 0, 720933, 0, 0, 720935, 2, 0, 786432, 0, 0, 786434, 0, 0, 786436, 0, 0, 786438, 0, 0, 786440, 2, 0, 786441, 0, 0, 786460, 3, 0, 786461, 3, 0, 851979, 0, 0, 851981, 0, 0, 851983, 0, 0, 851985, 0, 0, 851987, 0, 0, 851989, 0, 0, 851991, 0, 0, 851993, 0, 0, 851995, 0, 0, 851997, 0, 0, 851999, 0, 0, 852001, 0, 0, 852003, 0, 0, 852005, 0, 0, 852007, 2, 0, 983039, 3, 0, 917505, 3, 0, 917507, 3, 0, 917509, 3, 0, 917511, 3, 0, 917513, 3, 0, 983040, 0, 0, 983042, 0, 0, 983044, 0, 0, 983046, 0, 0, 983048, 0, 0, 983050, 0, 0, 983052, 0, 0, 983054, 0, 0, 983056, 0, 0, 983058, 0, 0, 983060, 0, 0, 983062, 0, 0, 983064, 0, 0, 983066, 0, 0, 983068, 0, 0, 983070, 0, 0, 983072, 0, 0, 983074, 0, 0, 983076, 0, 0, 983078, 0, 0, 1114112, 0, 0, 1114114, 0, 0, 1114116, 0, 0, 1114118, 0, 0, 1114120, 0, 0, 1114122, 0, 0, 1114124, 0, 0, 1114126, 0, 0, 1114128, 0, 0, 1114130, 0, 0, 1114132, 0, 0, 1114134, 0, 0, 1114136, 0, 0, 1114138, 0, 0, 1114140, 0, 0, 1114142, 0, 0, 1114144, 0, 0, 1114146, 0, 0, 1114148, 0, 0, 1114150, 0, 0, 1245184, 0, 0, 1245186, 0, 0, 1245188, 0, 0, 1245190, 0, 0, 1245192, 0, 0, 1245194, 0, 0, 1245196, 0, 0, 1245198, 0, 0, 1245200, 0, 0, 1245202, 0, 0, 1245204, 0, 0, 1245206, 0, 0, 1245208, 0, 0, 1245210, 0, 0, 1245212, 0, 0, 1245214, 0, 0, 1245216, 0, 0, 1245218, 0, 0, 1245220, 0, 0, 1245222, 0, 0, 1376256, 3, 0, 1376258, 3, 0, 1376260, 3, 0, 1376262, 3, 0, 1376264, 3, 0, 1376266, 3, 0, 1376268, 3, 0, 1376270, 3, 0, 1376272, 3, 0, 1376274, 3, 0, 1376276, 3, 0, 1376278, 3, 0, 1376280, 3, 0, 1376282, 3, 0, 1376284, 3, 0, 1376286, 3, 0, 1376288, 3, 0, 1376290, 3, 0, 1376292, 3, 0, 1376294, 3, 0, 1441792, 4, 0, 1441794, 4, 0, 1441796, 4, 0, 1441798, 4, 0, 1441800, 4, 0, 1441802, 4, 0, 1441804, 4, 0, 1441806, 4, 0, 1441808, 4, 0, 1441810, 4, 0, 1441812, 4, 0, 1441814, 4, 0, 1441816, 4, 0, 1441818, 4, 0, 1441820, 4, 0, 1441822, 4, 0, 1441824, 4, 0, 1441826, 4, 0, 1441828, 4, 0, 1441830, 4, 0 )

[node name="BlackMage" parent="." instance=ExtResource( 3 )]
position = Vector2( 1160.98, 556.375 )
scale = Vector2( 3.5, 3.5 )
frame = 2
playing = true
flip_h = true

[node name="DialogBox" parent="." instance=ExtResource( 5 )]
margin_left = 204.317
margin_top = 77.8332
margin_right = 994.317
margin_bottom = 271.833

[node name="PlayerPosition" type="Node2D" parent="."]
position = Vector2( -230, 0 )

[node name="CutscenePlayer" parent="PlayerPosition" instance=ExtResource( 1 )]
position = Vector2( 147, 611.65 )
z_index = 2
animation = "Run"
frame = 2
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerPosition"]
anims/Arrive = SubResource( 1 )
anims/Fly = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -19.184
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 726.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/Fade = SubResource( 3 )
